crates/rstest-bdd-macros/tests/fixtures/step_struct_pattern.stderr
error: unsupported pattern `User { name }`; expected a single identifier
  --> tests/fixtures/step_struct_pattern.rs:11:21
   |
11 | fn step_with_struct(User { name }: User) {}
   |                     ^^^^^^^^^^^^^
